--- a/podanieadm.html
+++ b/podanieadm.html
@@ -297,10 +297,6 @@
               <div class="u-back-slide" data-image-width="720" data-image-height="368">
                 <img class="u-back-image u-expanded u-image-contain" src="https://assets.nicepagecdn.com/651b9fe3/918877/images/SPOILER_image.png">
               </div>
-              <div class="u-align-center u-over-slide u-shading u-valign-bottom u-over-slide-2">
-                <h3 class="u-gallery-heading">Sample Title</h3>
-                <p class="u-gallery-text">Sample Text</p>
-              </div>
             </div>
             <div class="u-carousel-item u-effect-fade u-gallery-item u-carousel-item-3" data-image-width="720" data-image-height="373">
               <div class="u-back-slide">
@@ -404,15 +400,15 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
     
     
     <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="https://nicepage.com/website-templates" target="_blank">
-        <span>Website Templates</span>
+      <a class="u-link" href="https://discord.gg/FNdasTYeF6" target="_blank">
+        <span>OchotaRP</span>
       </a>
       <p class="u-text">
-        <span>created with</span>
+        <span>| Realizacja:</span>
       </p>
-      <a class="u-link" href="" target="_blank">
-        <span>Website Builder Software</span>
-      </a>. 
+      <a class="u-link" href="https://discord.gg/Zca7q6Zw5u" target="_blank">
+        <span>CFG LAB</span>
+      </a>.
     </section>
   
 </body></html>
